// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interop-loose export-default 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = 42;"
`;

exports[`interop-loose export-default-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = {};"
`;

exports[`interop-loose export-default-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = [];"
`;

exports[`interop-loose export-default-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = foo;"
`;

exports[`interop-loose export-default-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
function _ref() {}"
`;

exports[`interop-loose export-default-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _ref;
  }
});
class _ref {}"
`;

exports[`interop-loose export-default-7 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
function foo() {}"
`;

exports[`interop-loose export-default-8 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return Foo;
  }
});
class Foo {}"
`;

exports[`interop-loose export-default-9 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop-loose export-default-10 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
var _default = function () {
  return "foo";
}();"
`;

exports[`interop-loose export-default-11 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _default;
  }
});
exports.Cacher = Cacher;
var _default = new Cacher();
function Cacher(databaseName) {}"
`;

exports[`interop-loose export-destructured 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "x", {
  enumerable: true,
  get: function () {
    return x;
  }
});
Object.defineProperty(exports, "y", {
  enumerable: true,
  get: function () {
    return y;
  }
});
exports.f1 = f1;
exports.f2 = f2;
exports.f3 = f3;
exports.f4 = f4;
let x = 0;
let y = 0;
function f1() {
  ({
    x
  } = {
    x: 1
  });
}
function f2() {
  ({
    x,
    y
  } = {
    x: 2,
    y: 3
  });
}
function f3() {
  [x, y, z] = [3, 4, 5];
}
function f4() {
  [x,, y] = [3, 4, 5];
}"
`;

exports[`interop-loose export-from 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
var _foo = require("foo");
Object.keys(_foo).forEach(function (k) {
  if (k !== 'default' && !Object.prototype.hasOwnProperty.call(exports, k)) {
    Object.defineProperty(exports, k, {
      enumerable: true,
      get: function () {
        return _foo[k];
      }
    });
  }
});"
`;

exports[`interop-loose export-from-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop-loose export-from-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.bar;
  }
});
var _foo = require("foo");"
`;

exports[`interop-loose export-from-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop-loose export-from-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
var _foo = require("foo");"
`;

exports[`interop-loose export-from-6 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return _foo.bar;
  }
});
var _foo = require("foo");"
`;

exports[`interop-loose export-from-7 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo2.default;
  }
});
var _foo = require("foo");
var _foo2 = _interopDefault(_foo);"
`;

exports[`interop-loose export-from-8 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return _foo.foo;
  }
});
Object.defineProperty(exports, "foo1", {
  enumerable: true,
  get: function () {
    return _foo.foo1;
  }
});
Object.defineProperty(exports, "foo2", {
  enumerable: true,
  get: function () {
    return _foo.foo2;
  }
});
Object.defineProperty(exports, "foo3", {
  enumerable: true,
  get: function () {
    return _foo.foo3;
  }
});
Object.defineProperty(exports, "foo4", {
  enumerable: true,
  get: function () {
    return _foo.foo4;
  }
});
Object.defineProperty(exports, "foo5", {
  enumerable: true,
  get: function () {
    return _foo.foo5;
  }
});
Object.defineProperty(exports, "foo6", {
  enumerable: true,
  get: function () {
    return _foo.foo6;
  }
});
Object.defineProperty(exports, "foo7", {
  enumerable: true,
  get: function () {
    return _foo.foo7;
  }
});
Object.defineProperty(exports, "foo8", {
  enumerable: true,
  get: function () {
    return _foo.foo8;
  }
});
Object.defineProperty(exports, "foo9", {
  enumerable: true,
  get: function () {
    return _foo.foo9;
  }
});
Object.defineProperty(exports, "foo10", {
  enumerable: true,
  get: function () {
    return _foo.foo10;
  }
});
Object.defineProperty(exports, "foo11", {
  enumerable: true,
  get: function () {
    return _foo.foo11;
  }
});
Object.defineProperty(exports, "foo12", {
  enumerable: true,
  get: function () {
    return _foo.foo12;
  }
});
Object.defineProperty(exports, "foo13", {
  enumerable: true,
  get: function () {
    return _foo.foo13;
  }
});
Object.defineProperty(exports, "foo14", {
  enumerable: true,
  get: function () {
    return _foo.foo14;
  }
});
Object.defineProperty(exports, "foo15", {
  enumerable: true,
  get: function () {
    return _foo.foo15;
  }
});
Object.defineProperty(exports, "foo16", {
  enumerable: true,
  get: function () {
    return _foo.foo16;
  }
});
Object.defineProperty(exports, "foo17", {
  enumerable: true,
  get: function () {
    return _foo.foo17;
  }
});
Object.defineProperty(exports, "foo18", {
  enumerable: true,
  get: function () {
    return _foo.foo18;
  }
});
Object.defineProperty(exports, "foo19", {
  enumerable: true,
  get: function () {
    return _foo.foo19;
  }
});
Object.defineProperty(exports, "foo20", {
  enumerable: true,
  get: function () {
    return _foo.foo20;
  }
});
Object.defineProperty(exports, "foo21", {
  enumerable: true,
  get: function () {
    return _foo.foo21;
  }
});
Object.defineProperty(exports, "foo22", {
  enumerable: true,
  get: function () {
    return _foo.foo22;
  }
});
Object.defineProperty(exports, "foo23", {
  enumerable: true,
  get: function () {
    return _foo.foo23;
  }
});
Object.defineProperty(exports, "foo24", {
  enumerable: true,
  get: function () {
    return _foo.foo24;
  }
});
Object.defineProperty(exports, "foo25", {
  enumerable: true,
  get: function () {
    return _foo.foo25;
  }
});
Object.defineProperty(exports, "foo26", {
  enumerable: true,
  get: function () {
    return _foo.foo26;
  }
});
Object.defineProperty(exports, "foo27", {
  enumerable: true,
  get: function () {
    return _foo.foo27;
  }
});
Object.defineProperty(exports, "foo28", {
  enumerable: true,
  get: function () {
    return _foo.foo28;
  }
});
Object.defineProperty(exports, "foo29", {
  enumerable: true,
  get: function () {
    return _foo.foo29;
  }
});
Object.defineProperty(exports, "foo30", {
  enumerable: true,
  get: function () {
    return _foo.foo30;
  }
});
Object.defineProperty(exports, "foo31", {
  enumerable: true,
  get: function () {
    return _foo.foo31;
  }
});
Object.defineProperty(exports, "foo32", {
  enumerable: true,
  get: function () {
    return _foo.foo32;
  }
});
Object.defineProperty(exports, "foo33", {
  enumerable: true,
  get: function () {
    return _foo.foo33;
  }
});
Object.defineProperty(exports, "foo34", {
  enumerable: true,
  get: function () {
    return _foo.foo34;
  }
});
Object.defineProperty(exports, "foo35", {
  enumerable: true,
  get: function () {
    return _foo.foo35;
  }
});
Object.defineProperty(exports, "foo36", {
  enumerable: true,
  get: function () {
    return _foo.foo36;
  }
});
Object.defineProperty(exports, "foo37", {
  enumerable: true,
  get: function () {
    return _foo.foo37;
  }
});
Object.defineProperty(exports, "foo38", {
  enumerable: true,
  get: function () {
    return _foo.foo38;
  }
});
Object.defineProperty(exports, "foo39", {
  enumerable: true,
  get: function () {
    return _foo.foo39;
  }
});
Object.defineProperty(exports, "foo40", {
  enumerable: true,
  get: function () {
    return _foo.foo40;
  }
});
Object.defineProperty(exports, "foo41", {
  enumerable: true,
  get: function () {
    return _foo.foo41;
  }
});
Object.defineProperty(exports, "foo42", {
  enumerable: true,
  get: function () {
    return _foo.foo42;
  }
});
Object.defineProperty(exports, "foo43", {
  enumerable: true,
  get: function () {
    return _foo.foo43;
  }
});
Object.defineProperty(exports, "foo44", {
  enumerable: true,
  get: function () {
    return _foo.foo44;
  }
});
Object.defineProperty(exports, "foo45", {
  enumerable: true,
  get: function () {
    return _foo.foo45;
  }
});
Object.defineProperty(exports, "foo46", {
  enumerable: true,
  get: function () {
    return _foo.foo46;
  }
});
Object.defineProperty(exports, "foo47", {
  enumerable: true,
  get: function () {
    return _foo.foo47;
  }
});
Object.defineProperty(exports, "foo48", {
  enumerable: true,
  get: function () {
    return _foo.foo48;
  }
});
Object.defineProperty(exports, "foo49", {
  enumerable: true,
  get: function () {
    return _foo.foo49;
  }
});
Object.defineProperty(exports, "foo50", {
  enumerable: true,
  get: function () {
    return _foo.foo50;
  }
});
Object.defineProperty(exports, "foo51", {
  enumerable: true,
  get: function () {
    return _foo.foo51;
  }
});
Object.defineProperty(exports, "foo52", {
  enumerable: true,
  get: function () {
    return _foo.foo52;
  }
});
Object.defineProperty(exports, "foo53", {
  enumerable: true,
  get: function () {
    return _foo.foo53;
  }
});
Object.defineProperty(exports, "foo54", {
  enumerable: true,
  get: function () {
    return _foo.foo54;
  }
});
Object.defineProperty(exports, "foo55", {
  enumerable: true,
  get: function () {
    return _foo.foo55;
  }
});
Object.defineProperty(exports, "foo56", {
  enumerable: true,
  get: function () {
    return _foo.foo56;
  }
});
Object.defineProperty(exports, "foo57", {
  enumerable: true,
  get: function () {
    return _foo.foo57;
  }
});
Object.defineProperty(exports, "foo58", {
  enumerable: true,
  get: function () {
    return _foo.foo58;
  }
});
Object.defineProperty(exports, "foo59", {
  enumerable: true,
  get: function () {
    return _foo.foo59;
  }
});
Object.defineProperty(exports, "foo60", {
  enumerable: true,
  get: function () {
    return _foo.foo60;
  }
});
Object.defineProperty(exports, "foo61", {
  enumerable: true,
  get: function () {
    return _foo.foo61;
  }
});
Object.defineProperty(exports, "foo62", {
  enumerable: true,
  get: function () {
    return _foo.foo62;
  }
});
Object.defineProperty(exports, "foo63", {
  enumerable: true,
  get: function () {
    return _foo.foo63;
  }
});
Object.defineProperty(exports, "foo64", {
  enumerable: true,
  get: function () {
    return _foo.foo64;
  }
});
Object.defineProperty(exports, "foo65", {
  enumerable: true,
  get: function () {
    return _foo.foo65;
  }
});
Object.defineProperty(exports, "foo66", {
  enumerable: true,
  get: function () {
    return _foo.foo66;
  }
});
Object.defineProperty(exports, "foo67", {
  enumerable: true,
  get: function () {
    return _foo.foo67;
  }
});
Object.defineProperty(exports, "foo68", {
  enumerable: true,
  get: function () {
    return _foo.foo68;
  }
});
Object.defineProperty(exports, "foo69", {
  enumerable: true,
  get: function () {
    return _foo.foo69;
  }
});
Object.defineProperty(exports, "foo70", {
  enumerable: true,
  get: function () {
    return _foo.foo70;
  }
});
Object.defineProperty(exports, "foo71", {
  enumerable: true,
  get: function () {
    return _foo.foo71;
  }
});
Object.defineProperty(exports, "foo72", {
  enumerable: true,
  get: function () {
    return _foo.foo72;
  }
});
Object.defineProperty(exports, "foo73", {
  enumerable: true,
  get: function () {
    return _foo.foo73;
  }
});
Object.defineProperty(exports, "foo74", {
  enumerable: true,
  get: function () {
    return _foo.foo74;
  }
});
Object.defineProperty(exports, "foo75", {
  enumerable: true,
  get: function () {
    return _foo.foo75;
  }
});
Object.defineProperty(exports, "foo76", {
  enumerable: true,
  get: function () {
    return _foo.foo76;
  }
});
Object.defineProperty(exports, "foo77", {
  enumerable: true,
  get: function () {
    return _foo.foo77;
  }
});
Object.defineProperty(exports, "foo78", {
  enumerable: true,
  get: function () {
    return _foo.foo78;
  }
});
Object.defineProperty(exports, "foo79", {
  enumerable: true,
  get: function () {
    return _foo.foo79;
  }
});
Object.defineProperty(exports, "foo80", {
  enumerable: true,
  get: function () {
    return _foo.foo80;
  }
});
Object.defineProperty(exports, "foo81", {
  enumerable: true,
  get: function () {
    return _foo.foo81;
  }
});
Object.defineProperty(exports, "foo82", {
  enumerable: true,
  get: function () {
    return _foo.foo82;
  }
});
Object.defineProperty(exports, "foo83", {
  enumerable: true,
  get: function () {
    return _foo.foo83;
  }
});
Object.defineProperty(exports, "foo84", {
  enumerable: true,
  get: function () {
    return _foo.foo84;
  }
});
Object.defineProperty(exports, "foo85", {
  enumerable: true,
  get: function () {
    return _foo.foo85;
  }
});
Object.defineProperty(exports, "foo86", {
  enumerable: true,
  get: function () {
    return _foo.foo86;
  }
});
Object.defineProperty(exports, "foo87", {
  enumerable: true,
  get: function () {
    return _foo.foo87;
  }
});
Object.defineProperty(exports, "foo88", {
  enumerable: true,
  get: function () {
    return _foo.foo88;
  }
});
Object.defineProperty(exports, "foo89", {
  enumerable: true,
  get: function () {
    return _foo.foo89;
  }
});
Object.defineProperty(exports, "foo90", {
  enumerable: true,
  get: function () {
    return _foo.foo90;
  }
});
Object.defineProperty(exports, "foo91", {
  enumerable: true,
  get: function () {
    return _foo.foo91;
  }
});
Object.defineProperty(exports, "foo92", {
  enumerable: true,
  get: function () {
    return _foo.foo92;
  }
});
Object.defineProperty(exports, "foo93", {
  enumerable: true,
  get: function () {
    return _foo.foo93;
  }
});
Object.defineProperty(exports, "foo94", {
  enumerable: true,
  get: function () {
    return _foo.foo94;
  }
});
Object.defineProperty(exports, "foo95", {
  enumerable: true,
  get: function () {
    return _foo.foo95;
  }
});
Object.defineProperty(exports, "foo96", {
  enumerable: true,
  get: function () {
    return _foo.foo96;
  }
});
Object.defineProperty(exports, "foo97", {
  enumerable: true,
  get: function () {
    return _foo.foo97;
  }
});
Object.defineProperty(exports, "foo98", {
  enumerable: true,
  get: function () {
    return _foo.foo98;
  }
});
Object.defineProperty(exports, "foo99", {
  enumerable: true,
  get: function () {
    return _foo.foo99;
  }
});
Object.defineProperty(exports, "foo100", {
  enumerable: true,
  get: function () {
    return _foo.foo100;
  }
});
var _foo = require("foo");"
`;

exports[`interop-loose export-named 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop-loose export-named-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
var foo, bar;"
`;

exports[`interop-loose export-named-3 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop-loose export-named-4 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
var foo;"
`;

exports[`interop-loose export-named-5 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "default", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
var foo, bar;"
`;

exports[`interop-loose exports-variable 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "foo", {
  enumerable: true,
  get: function () {
    return foo;
  }
});
Object.defineProperty(exports, "foo2", {
  enumerable: true,
  get: function () {
    return foo2;
  }
});
Object.defineProperty(exports, "bar", {
  enumerable: true,
  get: function () {
    return bar;
  }
});
Object.defineProperty(exports, "foo3", {
  enumerable: true,
  get: function () {
    return foo3;
  }
});
Object.defineProperty(exports, "foo4", {
  enumerable: true,
  get: function () {
    return foo4;
  }
});
Object.defineProperty(exports, "foo5", {
  enumerable: true,
  get: function () {
    return foo5;
  }
});
Object.defineProperty(exports, "foo6", {
  enumerable: true,
  get: function () {
    return foo6;
  }
});
Object.defineProperty(exports, "foo7", {
  enumerable: true,
  get: function () {
    return foo7;
  }
});
exports.foo8 = foo8;
Object.defineProperty(exports, "foo9", {
  enumerable: true,
  get: function () {
    return foo9;
  }
});
var foo = 1;
var foo2 = 1,
  bar = 2;
var foo3 = function () {};
var foo4;
let foo5 = 2;
let foo6;
const foo7 = 3;
function foo8() {}
class foo9 {}"
`;

exports[`interop-loose hoist-function-exports 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
exports.nextOdd = nextOdd;
Object.defineProperty(exports, "isOdd", {
  enumerable: true,
  get: function () {
    return isOdd;
  }
});
var _evens = require("./evens");
function nextOdd(n) {
  return _evens.isEven(n) ? n + 1 : n + 2;
}
var isOdd = function (isEven) {
  return function (n) {
    return !isEven(n);
  };
}(_evens.isEven);"
`;

exports[`interop-loose illegal-export-esmodule 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__esModule", {
  enumerable: true,
  get: function () {
    return __esModule;
  }
});
var __esModule = false;"
`;

exports[`interop-loose illegal-export-esmodule-2 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "__esModule", {
  enumerable: true,
  get: function () {
    return __esModule;
  }
});
var __esModule;"
`;

exports[`interop-loose imports 1`] = `
"require("foo");
require("foo-bar");
require("./directory/foo-bar");"
`;

exports[`interop-loose imports-default 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default;
foo.default;"
`;

exports[`interop-loose imports-glob 1`] = `""`;

exports[`interop-loose imports-hoisting 1`] = `"tag\`foo\`;"`;

exports[`interop-loose imports-mixing 1`] = `
"function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
var _foo = require("foo");
var foo = _interopDefault(_foo);
foo.default;
_foo.baz;"
`;

exports[`interop-loose imports-named 1`] = `
"var _foo = require("foo");
_foo.bar;
_foo.bar2;
_foo.baz;
_foo.bar;
_foo.bar;
_foo.xyz;"
`;

exports[`interop-loose imports-ordering 1`] = `
"require('./foo');
require('./derp');"
`;

exports[`interop-loose module-shadow 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
exports.module = module;
function module() {}"
`;

exports[`interop-loose multi-load 1`] = `"console.log(helper);"`;

exports[`interop-loose overview 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
function _interopDefault(e) {
  return e && e.__esModule ? e : {
    default: e
  };
}
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return test;
  }
});
Object.defineProperty(exports, "test2", {
  enumerable: true,
  get: function () {
    return test2;
  }
});
require("foo");
require("foo-bar");
require("./directory/foo-bar");
var _foo2 = require("foo2");
var foo = _interopDefault(_foo2);
var _foo4 = require("foo4");
var _foo5 = require("foo5");
var test;
var test2 = 5;
_foo4.bar;
_foo5.foo;
foo.default;"
`;

exports[`interop-loose remap 1`] = `
"Object.defineProperty(exports, '__esModule', {
  value: true
});
Object.defineProperty(exports, "test", {
  enumerable: true,
  get: function () {
    return test;
  }
});
Object.defineProperty(exports, "a", {
  enumerable: true,
  get: function () {
    return a;
  }
});
Object.defineProperty(exports, "c", {
  enumerable: true,
  get: function () {
    return b;
  }
});
Object.defineProperty(exports, "e", {
  enumerable: true,
  get: function () {
    return d;
  }
});
Object.defineProperty(exports, "f", {
  enumerable: true,
  get: function () {
    return d;
  }
});
var test = 2;
test = 5;
test++;
(function () {
  var test = 2;
  test = 3;
  test++;
})();
var a = 2;
a = 3;
var b = 2;
b = 3;
var d = 3;
d = 4;"
`;
